cmake_minimum_required(VERSION 3.0)
PROJECT(cec17)
ADD_EXECUTABLE(test "test.cc")
ADD_EXECUTABLE(testrandom "testrandom.cc")
ADD_EXECUTABLE(testsolis "testsolis.cc")
ADD_EXECUTABLE(ICA "ICA.cc")
ADD_EXECUTABLE(BL-ICA "BL-ICA.cc")
ADD_EXECUTABLE(ICA-M "ICA-M.cc")
ADD_EXECUTABLE(ICA-WAR "ICA-WAR.cc")
ADD_LIBRARY("cec17_test_func" SHARED "cec17_test_func.c" "cec17.c")
TARGET_LINK_LIBRARIES(test "cec17_test_func")
TARGET_LINK_LIBRARIES(testrandom "cec17_test_func")
TARGET_LINK_LIBRARIES(testsolis "cec17_test_func")
target_link_libraries(ICA "cec17_test_func")
target_link_libraries(BL-ICA "cec17_test_func")
target_link_libraries(ICA-M "cec17_test_func")
target_link_libraries(ICA-WAR "cec17_test_func")